# qspace

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
include/: Application.h  Camera3D.h  GLWidget.h  MainWindow.h  Transform3D.h
include/3dObject/: Camera.h  Mesh.h  Node.h
include/Control/: Input.h
include/ModelLoader/: FbxLoader.h  ModelLoader.h
include/Scene/: Camera.h  Camera3D.h  Geometry.h  Material.h  Mesh.h  Node.h  Scene.h  Texture.h  TextureData.h  TextureFile.h  VertexBuffer.h
includes/: GLWidget.h  Input.h  Light.h  MainWindow.h  Material.h  Mesh.h  ModelLoader.h  Node.h  Scene.h  Transform3D.h  TriangleWindow.h  Vertex.h  Window.h
lib/: fbxsdk.h
lib/fbxsdk/: fbxsdk_def.h  fbxsdk_nsbegin.h
lib/fbxsdk/core/: fbxclassid.h  fbxconnectionpoint.h  fbxdatatypes.h  fbxemitter.h  fbxevent.h  fbxeventhandler.h  fbxlistener.h  fbxloadingstrategy.h  fbxmanager.h  fbxmodule.h  fbxobject.h  fbxperipheral.h  fbxplugin.h  fbxplugincontainer.h  fbxproperty.h  fbxpropertydef.h  fbxpropertyhandle.h  fbxpropertypage.h  fbxpropertytypes.h  fbxquery.h  fbxqueryevent.h  fbxscopedloadingdirectory.h  fbxscopedloadingfilename.h  fbxstream.h  fbxsymbol.h  fbxsystemunit.h  fbxxref.h
lib/fbxsdk/core/arch/: fbxalloc.h  fbxdebug.h  fbxnew.h  fbxstdcompliant.h  fbxtypes.h
lib/fbxsdk/core/base/: fbxarray.h  fbxbitset.h  fbxcharptrset.h  fbxcontainerallocators.h  fbxdynamicarray.h  fbxfile.h  fbxfolder.h  fbxhashmap.h  fbxintrusivelist.h  fbxmap.h  fbxmemorypool.h  fbxmultimap.h  fbxpair.h  fbxredblacktree.h  fbxset.h  fbxstatus.h  fbxstring.h  fbxstringlist.h  fbxtime.h  fbxtimecode.h  fbxutils.h
lib/fbxsdk/core/math/: fbxaffinematrix.h  fbxdualquaternion.h  fbxmath.h  fbxmatrix.h  fbxquaternion.h  fbxtransforms.h  fbxvector2.h  fbxvector4.h
lib/fbxsdk/core/sync/: fbxatomic.h  fbxclock.h  fbxsync.h  fbxthread.h
lib/fbxsdk/fileio/: fbxbase64coder.h  fbxexporter.h  fbxexternaldocreflistener.h  fbxfiletokens.h  fbxglobalcamerasettings.h  fbxgloballightsettings.h  fbxglobalsettings.h  fbxgobo.h  fbximporter.h  fbxiobase.h  fbxiopluginregistry.h  fbxiosettings.h  fbxiosettingspath.h  fbxprogress.h  fbxreader.h  fbxstatistics.h  fbxstatisticsfbx.h  fbxwriter.h
lib/fbxsdk/fileio/collada/: fbxcolladaanimationelement.h  fbxcolladaelement.h  fbxcolladaiostream.h  fbxcolladanamespace.h  fbxcolladautils.h  fbxreadercollada14.h  fbxwritercollada14.h
lib/fbxsdk/fileio/fbx/: fbxio.h  fbxreaderfbx5.h  fbxreaderfbx6.h  fbxreaderfbx7.h  fbxwriterfbx5.h  fbxwriterfbx6.h  fbxwriterfbx7.h
lib/fbxsdk/scene/: fbxaudio.h  fbxaudiolayer.h  fbxaxissystem.h  fbxcollection.h  fbxcollectionexclusive.h  fbxcontainer.h  fbxcontainertemplate.h  fbxdisplaylayer.h  fbxdocument.h  fbxdocumentinfo.h  fbxenvironment.h  fbxgroupname.h  fbxlibrary.h  fbxmediaclip.h  fbxobjectfilter.h  fbxobjectmetadata.h  fbxobjectscontainer.h  fbxpose.h  fbxreference.h  fbxscene.h  fbxselectionnode.h  fbxselectionset.h  fbxtakeinfo.h  fbxthumbnail.h  fbxvideo.h
lib/fbxsdk/scene/animation/: fbxanimcurve.h  fbxanimcurvebase.h  fbxanimcurvefilters.h  fbxanimcurvenode.h  fbxanimevalclassic.h  fbxanimevalstate.h  fbxanimevaluator.h  fbxanimlayer.h  fbxanimstack.h  fbxanimutilities.h
lib/fbxsdk/scene/constraint/: fbxcharacter.h  fbxcharacternodename.h  fbxcharacterpose.h  fbxconstraint.h  fbxconstraintaim.h  fbxconstraintcustom.h  fbxconstraintparent.h  fbxconstraintposition.h  fbxconstraintrotation.h  fbxconstraintscale.h  fbxconstraintsinglechainik.h  fbxconstraintutils.h  fbxcontrolset.h  fbxhik2fbxcharacter.h
lib/fbxsdk/scene/geometry/: fbxblendshape.h  fbxblendshapechannel.h  fbxcache.h  fbxcachedeffect.h  fbxcamera.h  fbxcamerastereo.h  fbxcameraswitcher.h  fbxcluster.h  fbxdeformer.h  fbxgenericnode.h  fbxgeometry.h  fbxgeometrybase.h  fbxgeometryweightedmap.h  fbxlayer.h  fbxlayercontainer.h  fbxlight.h  fbxlimitsutilities.h  fbxline.h  fbxlodgroup.h  fbxmarker.h  fbxmesh.h  fbxnode.h  fbxnodeattribute.h  fbxnull.h  fbxnurbs.h  fbxnurbscurve.h  fbxnurbssurface.h  fbxopticalreference.h  fbxpatch.h  fbxproceduralgeometry.h  (+8 more)
lib/fbxsdk/utils/: fbxclonemanager.h  fbxdeformationsevaluator.h  fbxembeddedfilesaccumulator.h  fbxgeometryconverter.h  fbxmanipulators.h  fbxmaterialconverter.h  fbxnamehandler.h  fbxprocessor.h  fbxprocessorshaderdependency.h  fbxprocessorxref.h  fbxprocessorxrefuserlib.h  fbxrenamingstrategy.h  fbxrenamingstrategybase.h  fbxrenamingstrategyfbx5.h  fbxrenamingstrategyfbx6.h  fbxrenamingstrategyfbx7.h  fbxrenamingstrategyutilities.h  fbxrootnodeutility.h  fbxscenecheckutility.h  fbxusernotification.h
models/: ball.fbx  cube.fbx
playground/: CMakeLists.txt  play_QTriangleWindow.cpp.cpp
playground/OpenGLWindow/: CMakeLists.txt  OpenGLWindow.h  TriangleWindow.cpp
playground/QtGLTextures/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  window.cpp  window.h
playground/QtGLTextures/shaders/: frag.glsl  vert.glsl
shaders/: simple.frag  simple.vert
src/: Camera.cpp  Camera3D.cpp  GLWidget.cpp  Input.cpp  MainWindow.cpp  Material.cpp  ModelLoader.cpp  Node.cpp  OpenGLWindow.cpp  Transform3D.cpp  Window.cpp
src/ModelLoader/: FbxLoader.cpp  ModelLoader.cpp
tests/: test_OpenGLWindow.h  test_TriangleWindow.h  test_Window.h  tests.h
(+22 files in other folders)
